@@ -1,9 +1,12 @@
+import junitbuild.extensions.javaModuleName
 import junitbuild.java.UpdateJarAction
+import net.ltgt.gradle.errorprone.errorprone
+import net.ltgt.gradle.nullaway.nullaway
 
 plugins {
 	id("junitbuild.java-library-conventions")
+	id("junitbuild.java-nullability-conventions")
 	id("junitbuild.shadow-conventions")
-	id("junitbuild.java-multi-release-sources")
 }
 
 description = "JUnit Platform Console"
@@ -13,8 +16,7 @@ dependencies {
 	api(projects.junitPlatformReporting)
 
 	compileOnlyApi(libs.apiguardian)
-
-	compileOnly(libs.openTestReporting.events)
+	compileOnly(libs.jspecify)
 
 	shadowed(libs.picocli)
 
@@ -24,31 +26,37 @@ dependencies {
 }
 
 tasks {
-	compileModule {
+	compileJava {
 		options.compilerArgs.addAll(listOf(
-			"--add-modules", "org.opentest4j.reporting.events",
-			"--add-reads", "${project.projects.junitPlatformReporting.javaModuleName}=org.opentest4j.reporting.events",
 			"--add-modules", "info.picocli",
 			"--add-reads", "${javaModuleName}=info.picocli"
 		))
+		options.errorprone.nullaway {
+			excludedFieldAnnotations.addAll(
+				"picocli.CommandLine.ArgGroup",
+				"picocli.CommandLine.Mixin",
+				"picocli.CommandLine.Spec",
+			)
+		}
+	}
+	javadoc {
+		(options as StandardJavadocDocletOptions).apply {
+			addStringOption("-add-modules", "info.picocli")
+			addStringOption("-add-reads", "${javaModuleName}=info.picocli")
+		}
 	}
 	shadowJar {
-		val release17ClassesDir = sourceSets.mainRelease17.get().output.classesDirs.singleFile
-		inputs.dir(release17ClassesDir).withPathSensitivity(PathSensitivity.RELATIVE)
 		exclude("META-INF/versions/9/module-info.class")
 		relocate("picocli", "org.junit.platform.console.shadow.picocli")
 		from(projectDir) {
 			include("LICENSE-picocli.md")
 			into("META-INF")
 		}
-		from(sourceSets.mainRelease9.get().output.classesDirs)
 		doLast(objects.newInstance(UpdateJarAction::class).apply {
 			javaLauncher = project.javaToolchains.launcherFor(java.toolchain)
 			args.addAll(
 				"--file", archiveFile.get().asFile.absolutePath,
 				"--main-class", "org.junit.platform.console.ConsoleLauncher",
-				"--release", "17",
-				"-C", release17ClassesDir.absolutePath, "."
 			)
 		})
 	}
@@ -59,20 +67,5 @@ tasks {
 		manifest {
 			attributes("Main-Class" to "org.junit.platform.console.ConsoleLauncher")
 		}
-	}
-
-	// This jar contains some Java 9 code
-	// (org.junit.platform.console.ConsoleLauncherToolProvider which implements
-	// java.util.spi.ToolProvider which is @since 9).
-	// So in order to resolve this, it can only run on Java 9
-	osgiProperties {
-		property("-runee", "JavaSE-9")
-	}
-}
-
-eclipse {
-	classpath {
-		sourceSets -= project.sourceSets.mainRelease9.get()
-		sourceSets -= project.sourceSets.mainRelease17.get()
 	}
 }
